# discordly

./: .env.example  Dockerfile.bot  Dockerfile.web  README.md  docker-compose.yml  move-req.sh  pyproject.toml  requirements.txt  run.sh
discordly/: bot.py  web.py
tests/: test_discordly.py
